<resources>
    <string name="app_name">FLDSMDFR</string>

    <string name="action_settings">Config</string>
    <string name="action_map">Map</string>
    <string name="action_admin">Admin</string>

    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="title_activity_read_node">Leer Nodo</string>
    <string name="title_activity_node_register_maps">Registro de Nodos</string>

    <string name="node_count">Nodos registrados:</string>
    <string name="node_count_x">139</string>

    <string name="synchronize">sincronizar</string>

    <!-- MAPS-->
    <string name="node_name">Node: </string>
    <string name="lat_short">Lat: </string>
    <string name="lng_short">Lng: </string>
    <string name="lat_long">Latitude: </string>
    <string name="lng_long">Longitude: </string>

    <string name="btn_view_node">Recargar nodos</string>
    <string name="btn_save_node">Registrar nodos</string>
    <string name="btn_view_mode_satelite">satelite</string>
    <string name="btn_view_mode_terrain">terreno</string>
    <string name="btn_view_mode_normal">normal</string>

    <!-- QR-->
    <string name="qr_reading">Leyendo codigo</string>
    <string name="qr_result_lat">-33.449</string>
    <string name="qr_result_lng">-70.641</string>

    <!-- SETTINGS -->
    <string name="pref_map_type">TIPO DE MAPA</string>
    <string name="pref_map_type_summary">Seleccione el tipo de mapa por defecto</string>
    <string name="title_activity_settings">Settings</string>


    <!-- DB MANAGER -->
    <string name="db_manager_delete_all_data">Borrar todos los nodos</string>
    <string name="db_manager_create_database">Crear DB (destruye la existente)</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_node_detail">Datos del nodo:</string>
    <string name="title_activity_admin">Admin</string>


</resources>
